Profil sayfasının oluşturulması ve admin panelin eklenmesi